# hackathon2026

./: .env.example  .gitignore  COMMANDS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_SAM.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICKSTART_WINDOWS.md  README.md  README_SETUP.md  SAM_INTEGRATION_GUIDE.md  START_HERE.md  STEP_BY_STEP.md  docker-compose.yml  package-lock.json  package.json  ✅_COMPLETE.md
ai/: package.json
ai/src/: clustering.py  summarization.py
backend/: package.json  test-storage.ts  tsconfig.json
backend/src/: types.ts
backend/src/agents/: context-agent.ts  correlator-agent.ts  ethics-agent.ts  feedback-agent.ts  insight-agent.ts  signal-agent.ts  storage-agent.ts
backend/src/services/: api.ts  ingest.ts  message-bus.ts
backend/src/storage/: analytics-store.ts  mongo-store.ts  redis-store.ts
dashboard/: index.html  package.json
dashboard/src/: App.tsx
dashboard/src/pages/: Evidence.tsx  Feedback.tsx  Hotspots.tsx  Insights.tsx  Sentiment.tsx
docs/: ARCHITECTURE.md  EVENT_SCHEMA.md  INTEGRATION.md
sam-agents/: .env.example  Dockerfile  README.md  pyproject.toml
sam-agents/configs/: orchestrator.yaml  shared_config.yaml
sam-agents/configs/agents/: friction-analyzer.yaml  ux-insights-agent.yaml
sam-agents/src/: __init__.py  nats_bridge.py  publish_test.py  results_bridge.py  subscribe_analysis.py  subscribe_raw.py
widget/: DEV.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
widget/src/: consent.ts  index.ts  micro-prompt.ts  queue.ts  signal-capture.ts  throttle.ts  types.ts
