[project]
name = "flowback-sam-agents"
version = "0.1.0"
description = "Flowback Analytics - Solace Agent Mesh integration for UX insights"
requires-python = ">=3.11"
dependencies = [
    "solace-agent-mesh==1.13.3",
]

[tool.uv]
python-version = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
